Fix text alignment on mobile resolutions

--- a/.vuepress/theme/styles/theme.styl
+++ b/.vuepress/theme/styles/theme.styl
@@ -207,6 +207,8 @@ p:not(.description)
       padding-left 0
 
 @media (max-width: ($MQMobile))
+	p:not(.description)
+		text-align left
 	.hero
 		display none
 	.hero img
